[package]
name = "cucumber-test"
version = "0.1.0"
authors = ["Semen Evdokimov <evdokimovs@protonmail.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.0"
actix-web = "2.0"
actix-files = "0.2"
tokio = { version = "1.1", features = ["macros", "rt-multi-thread"] }
cucumber_rust = { version = "0.8", features = ["macros"]}
futures = "0.3"
async-trait = "0.1"
fantoccini = "0.17"
serde_json = "1.0"
uuid = { version = "0.8", features = ["v4"] }